--- a/views/logged/logged.hbs
+++ b/views/logged/logged.hbs
@@ -1,7 +1,8 @@
 
 
-<section class="   py-2 border-bottom-0 bg-dark" >
-<marquee behavior="" direction=""> <h6 class="text-white marquee m-0 p-0" style="letter-spacing: .25rem;"  ><span class="primaryText"><i class="fa-solid fa-angles-left"></i></span>  We don't deliver food,<span class="primaryText">We Deliver Experience </span><span class="text-white"><i class="fa-solid fa-angles-right"></i></span></h6></marquee>
+<section class="   py-2 border-bottom-0 " >
+{{!-- <marquee behavior="" direction=""> <h6 class="text-white marquee m-0 p-0" style="letter-spacing: .25rem;"  ><span class="primaryText"><i class="fa-solid fa-angles-left"></i></span>  We don't deliver food,<span class="primaryText">We Deliver Experience </span><span class="text-white"><i class="fa-solid fa-angles-right"></i></span></h6></marquee> --}}
+<marquee behavior="" direction=""><h6 class=" m-0 p-0" style="letter-spacing: .25rem;">We don't deliver Foods,<span class="primaryText">We deliver Experience   </span></h6></marquee>
 </section>
 
 
