--- a/views/error.hbs
+++ b/views/error.hbs
@@ -16,10 +16,10 @@
           How you got here is a mystery. But you can click the button below
           to go back to the homepage.
         </p>
-        {{!-- <p>{{message}}
+        <p>{{message}}
         </p>
         <p>{{error.stack}}
-        </p> --}}
+        </p>
         <a href="/" class="SeeSpan text-white fw-bold px-4 py-2 " style="text-decoration: none;">HOME</a>
       </div>
     </div>
